:hammer: Backend: Modified mostly All API and add a New Class
